--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,1 @@
-/* Logo in header START */
-.brand img{
-  vertical-align: top;
-}      
-.brand span{
-  height: 35px;
-  line-height: 35px;
-}
-/* Logo in header END */
-
-/* Button in inventory */
-.button1 {
-  margin: 0px 4px;
-}
-
-/* Input in inventory */
-.input1 {
-  margin-bottom: 0px !important; width: 60px !important;
-  margin-right: 5px;
-}
-
-/* to right */
-.to_right {
-  text-align: right !important;
-}
- 
-/* in inventory: delete space between add-on and input */   
-.add-on {
-  margin-right: -5px !important;
-}
-
-/* space around img in inventory */
-.img1 {
-  margin-right: 5px;  
-}
-
-/* Click for max items to input */
-.click_max {
-  cursor: pointer;
-}
+/* Logo in header START */.brand img{  vertical-align: top;}      .brand span{  height: 35px;  line-height: 35px;}/* Logo in header END *//* Button in inventory */.button1 {  margin: 0px 4px;}/* Input in inventory */.input1 {  margin-bottom: 0px !important; width: 60px !important;  margin-right: 5px;}/* to right */.to_right {  text-align: right !important;} /* in inventory: delete space between add-on and input */.add-on {  margin-right: -5px !important;}/* space around img in inventory */.img1 {  margin-right: 5px;  }/* Click for max items to input */.click_max {  cursor: pointer;}/* Edit right div in green line at top */.nav.pull-right {  margin-top: 5px;}/* Reset default border-bottom in main (footer is only at login page) */.main{  border-bottom: 0px !important;	}/* Edit black footer in login page */.footer{  border-top: 1px solid #000;		position: fixed !important;}/* messages */.alert{  margin: 10px !important;}/* Frame in FAQ */.widget{	margin-top: 10px;}
